--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+*.iml
+*.iws
 .gradle
 /local.properties
 /.idea/workspace.xml
+/.idea/tasks.xml
 /.idea/libraries
+/.idea/gradle.xml
 .DS_Store
 /build
 /captures
