--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:2.3.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,5 +15,20 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven{
+            url "https://maven.google.com"
+        }
+        maven{
+            url  "https://jitpack.io"
+        }
     }
+
+}
+
+ext{
+    compileSdkVersion = 26
+    minSdkVersion = 16
+    targetSdkVersion = 26
+    buildToolsVersion = "26.0.1"
+    supportLibVersion = "26.1.0"
 }
