--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     })
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     compile 'com.google.android.gms:play-services-ads:11.0.4'
+    compile project(':jokeLibrary')
 }
