--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
-
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -27,7 +27,7 @@ allprojects {
 
 ext{
     compileSdkVersion = 26
-    minSdkVersion = 16
+    minSdkVersion = 19
     targetSdkVersion = 26
     buildToolsVersion = "26.0.1"
     supportLibVersion = "26.1.0"
