--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,16 @@
 apply plugin: 'com.android.application'
+// V2: Apply the new Endpoints Framework client plugin
+apply plugin: 'com.google.cloud.tools.endpoints-framework-client'
 
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        // V2: Add the new Endpoints Framework plugin dependencies
+        classpath 'com.google.cloud.tools:endpoints-framework-gradle-plugin:1.0.0'
+    }
+}
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
@@ -26,11 +37,19 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+
+    compile project(':libraryDisplayJoke')
+
     compile 'com.google.android.gms:play-services-ads:11.0.4'
 
     compile 'com.jakewharton:butterknife:8.8.1'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    compile project(':jokeLibrary')
-    compile project(':libraryDisplayJoke')
+    //compile project(path: ':backend', configuration: 'android-endpoints')
+    // V2: Endpoints Framework v2 migration
+    endpointsServer project(path: ':backend', configuration: 'endpoints')
+    compile 'com.google.api-client:google-api-client:1.23.0'
+    compile 'com.google.http-client:google-http-client-android:1.22.0'
+
 }
