--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+        free {
+            applicationId "com.udacity.gradle.builditbigger.free"
+        }
+        paid {
+            applicationId "com.udacity.gradle.builditbigger.paid"
+        }
+     }
 }
 
 dependencies {
@@ -40,7 +48,7 @@ dependencies {
 
     compile project(':libraryDisplayJoke')
 
-    compile 'com.google.android.gms:play-services-ads:11.0.4'
+    freeCompile  'com.google.android.gms:play-services-ads:11.0.4'
 
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
