--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile 'com.google.appengine:appengine-endpoints:1.9.56'
     compile 'com.google.appengine:appengine-endpoints-deps:1.9.56'
     compile 'javax.servlet:servlet-api:2.5'
+    compile project(':jokelibrary')
 }
 
 appengine {
