--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:11.0.4'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile project(path: ':backend', configuration: 'android-endpoints')
+    compile project(path: ':libraryDisplayJoke')
     compile ('com.google.api-client:google-api-client:1.23.0')
             {
                 exclude module: 'httpclient' //by artifact name
